--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Mark Hazleton
 email: mark.hazleton@controlorigins.com
 description: >- # this means to ignore newlines until "baseurl:"
-  All about Mark Hazleton on GitHub, LinkedIN, and Azure DevOps.
+  Mark Hazleton on GitHub
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author:
